--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -742,7 +742,7 @@
                     <ul class="log-out">
                         <li><a routerLink="/home/profile/{{id}}" title=""><i class="ti-user"></i> view profile</a></li>
                         <li><a href="setting.html" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
-                        <li><a href="#" title=""><i class="ti-target"></i>activity log</a></li>
+                        <li><a (click)="openDialogChangePassword()"><i class="ti-target"></i>Change Password</a></li>
                         <li><a href="setting.html" title=""><i class="ti-settings"></i>account setting</a></li>
                         <li><a (click)="logout()" title=""><i class="ti-power-off"></i>log out</a></li>
                     </ul>
