--- a/src/app/posting/posting/comment/comment.component.html
+++ b/src/app/posting/posting/comment/comment.component.html
@@ -1,4 +1,14 @@
  <li>
+         <div class="more-post-optns" style="float: right"><i class="ti-more-alt"></i>
+             <ul>
+                 <li (click)="openDialogEdit()"><i class="fa fa-pencil-square-o" (click)="openDialogEdit()"></i>Edit Comment</li>
+                 <li (click)="openDialogDelete()"><i class="fa fa-trash-o" (click)="openDialogDelete()"></i>Delete Comment</li>
+                 <li class="bad-report"><i class="fa fa-flag"></i>Report Comment</li>
+                 <li><i class="fa fa-address-card-o"></i>Boost This Commet</li>
+                 <li><i class="fa fa-clock-o"></i>Schedule Comment</li>
+                 <li><i class="fa fa-wpexplorer"></i>Select as featured</li>
+             </ul>
+         </div>
         <div class="comet-avatar">
             <img src="{{comment.owner.avatar}}" alt="">
         </div>
