--- a/src/app/posting/posting/comment/comment.component.html
+++ b/src/app/posting/posting/comment/comment.component.html
@@ -1,12 +1,12 @@
  <li>
-         <div *ngIf="comment.owner.id === idLogging" class="more-post-optns" style="float: right"><i class="ti-more-alt"></i>
+         <div class="more-post-optns" style="float: right"><i class="ti-more-alt"></i>
              <ul>
-                 <li (click)="openDialogEdit()"><i class="fa fa-pencil-square-o" (click)="openDialogEdit()"></i>Edit Comment</li>
-                 <li (click)="openDialogDelete()"><i class="fa fa-trash-o" (click)="openDialogDelete()"></i>Delete Comment</li>
+                 <li *ngIf="comment.owner.id === idLogging" (click)="openDialogEdit()"><i class="fa fa-pencil-square-o" (click)="openDialogEdit()"></i>Edit Comment</li>
+                 <li *ngIf="comment.owner.id === idLogging" (click)="openDialogDelete()"><i class="fa fa-trash-o" (click)="openDialogDelete()"></i>Delete Comment</li>
                  <li class="bad-report"><i class="fa fa-flag"></i>Report Comment</li>
-                 <li><i class="fa fa-address-card-o"></i>Boost This Commet</li>
-                 <li><i class="fa fa-clock-o"></i>Schedule Comment</li>
-                 <li><i class="fa fa-wpexplorer"></i>Select as featured</li>
+                 <li *ngIf="comment.owner.id === idLogging"><i class="fa fa-address-card-o"></i>Boost This Commet</li>
+                 <li *ngIf="comment.owner.id === idLogging"><i class="fa fa-clock-o"></i>Schedule Comment</li>
+                 <li *ngIf="comment.owner.id === idLogging"><i class="fa fa-wpexplorer"></i>Select as featured</li>
              </ul>
          </div>
         <div class="comet-avatar">
