--- a/src/app/posting/posting/posting.component.html
+++ b/src/app/posting/posting/posting.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" fxLayout="column">
   <div *ngFor="let posting of postings">
-    <app-card (commentIdDelete)="deleteComment($event)" (postingIdDelete)="delete($event)" [posting]="posting" [comments]="posting.comments"></app-card>
+    <app-card [isProfile]="isProfile" (commentIdDelete)="deleteComment($event)" (postingIdDelete)="delete($event)" [posting]="posting" [comments]="posting.comments"></app-card>
   </div>
 </div>
