--- a/src/app/form-login/login/login.component.html
+++ b/src/app/form-login/login/login.component.html
@@ -7,9 +7,9 @@
                     <div class="col-lg-8">
                         <div class="big-ad">
                             <figure><img style="width: 200px; height: 200px;"  src="../../assets/images/logosIShareLife2/logoIShareLifeMain.png" alt=""></figure>
-                            <h1>Welcome to the Pitnik</h1>
+                            <h1>Welcome to the iShareLife</h1>
                             <p>
-                                Pitnik is a social network template that can be used to connect people. use this
+                                iShareLife is a social network template that can be used to connect people. use this
                                 template for multipurpose social activities like job, dating, posting, bloging and much
                                 more. Now join & Make Cool Friends around the world !!!
                             </p>
