--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -212,7 +212,7 @@
 
     <div class="topbar stick">
         <div class="logo">
-            <a title="" routerLink="/home"></a>
+            <a title="" routerLink="/home"><img style="width: 100px; height: 100px;"  src="../../assets/images/logosIShareLife2/logoIShareLifeMain.png" alt=""></a>
         </div>
         <div class="top-area">
 <!--            <div class="main-menu">-->
@@ -230,7 +230,7 @@
                 <span>Newsfeed</span>
             </div>
             <ul class="setting-area">
-                <li><a routerLink="home" title="Home" data-ripple=""><i class="fa fa-home"></i></a></li>
+                <li><a routerLink="/home" title="Home" data-ripple=""><i class="fa fa-home"></i></a></li>
                 <li>
                     <a href="#" title="Friend Requests" data-ripple="">
                         <i class="fa fa-user"></i><em class="bg-red">5</em>
