--- a/src/app/profile/friend/friend.component.html
+++ b/src/app/profile/friend/friend.component.html
@@ -14,6 +14,10 @@
                                                     <h5>Friends  <span>{{sumFriend}}</span></h5>
                                                 </div>
                                             </div>
+<!--                                            <div class="col-lg-4">-->
+<!--                                                <h3 (click)="listfriiend()">List of mutual friends</h3>-->
+<!--                                            </div>-->
+
                                             <div class="col-lg-6">
                                                 <div class="row merged20">
                                                     <div class="col-lg-7 col-lg-7 col-sm-7">
@@ -42,6 +46,7 @@
                                                         </div>
                                                         <ul class="frnd-info">
                                                             <li *ngIf="element.phone"><span>Phone:{{element.phone}}</span> </li>
+                                                            <li *ngIf="element.address"><span>Address:{{element.address}}</span> </li>
                                                             <li *ngIf="element.email"><span>Email:{{element.email}}</span> </li>
                                                             <li *ngIf="element.hobbies"><span>Hobbies:</span> {{element.hobbies}}</li>
                                                             <li *ngIf="element.gender"><span>Gender:</span> {{element.gender.gender}}</li>
