--- a/src/app/profile/list-pending/list-pending.component.html
+++ b/src/app/profile/list-pending/list-pending.component.html
@@ -42,6 +42,7 @@
                                                         </div>
                                                         <ul class="frnd-info">
                                                             <li *ngIf="element.phone"><span>Phone:{{element.phone}}</span> </li>
+                                                            <li *ngIf="element.address"><span>Address:{{element.address}}</span> </li>
                                                             <li *ngIf="element.email"><span>Email:{{element.email}}</span> </li>
                                                             <li *ngIf="element.hobbies"><span>Hobbies:</span> {{element.hobbies}}</li>
                                                             <li *ngIf="element.gender"><span>Gender:</span> {{element.gender.gender}}</li>
