--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -740,7 +740,7 @@
                     </ul>
                     <span class="seting-title">User setting <a href="#" title="">see all</a></span>
                     <ul class="log-out">
-                        <li><a  (click)="navigateToProfile(id)"><i class="ti-user"></i> view profile</a></li>
+                        <li><a  (click)="navigateToProfile()"><i class="ti-user"></i> view profile</a></li>
                         <li><a (click)="openDialogUpdateInfo()"><i class="ti-pencil-alt"></i>edit profile</a></li>
                         <li><a (click)="openDialogChangePassword()"><i class="ti-target"></i>Change Password</a></li>
                         <li><a href="setting.html" title=""><i class="ti-settings"></i>account setting</a></li>
