--- a/src/app/profile/friend/friend.component.html
+++ b/src/app/profile/friend/friend.component.html
@@ -11,23 +11,23 @@
                                         <div class="row">
                                             <div class="col-lg-6">
                                                 <div class="align-left">
-                                                    <h5>Friends  <span>{{sumFriend}}</span></h5>
+                                                    <h5 (click)="getListFriend()">Friends  <span>{{sumFriend}}</span></h5>
                                                 </div>
                                             </div>
-<!--                                            <div class="col-lg-4">-->
-<!--                                                <h3 (click)="listfriiend()">List of mutual friends</h3>-->
-<!--                                            </div>-->
+                                            <div class="col-lg-4">
+                                                <h5 (click)="mutualFriends()">List of mutual friends: {{sumMutualFriends}}</h5>
+                                            </div>
 
-                                            <div class="col-lg-6">
-                                                <div class="row merged20">
-                                                    <div class="col-lg-7 col-lg-7 col-sm-7">
-                                                        <form method="post">
-                                                            <input type="text" placeholder="Search Friend">
-                                                            <button type="submit"><i class="fa fa-search"></i></button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
+<!--                                            <div class="col-lg-6">-->
+<!--                                                <div class="row merged20">-->
+<!--                                                    <div class="col-lg-7 col-lg-7 col-sm-7">-->
+<!--                                                        <form method="post">-->
+<!--                                                            <input type="text" placeholder="Search Friend">-->
+<!--                                                            <button type="submit"><i class="fa fa-search"></i></button>-->
+<!--                                                        </form>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
                                         </div>
                                     </div>
                                 </div>
@@ -42,7 +42,7 @@
                                                     <div class="frnd-meta">
                                                         <img [src]="element.avatar" alt="avatar" >
                                                         <div class="frnd-name">
-                                                            <a routerLink="/home/profile/{{element.id}}">{{element.name}}</a>
+                                                            <a (click)="navigateToProfile(element.id)">{{element.name}}</a>
                                                         </div>
                                                         <ul class="frnd-info">
                                                             <li *ngIf="element.phone"><span>Phone:{{element.phone}}</span> </li>
