--- a/src/app/profile/list-pending/list-pending.component.html
+++ b/src/app/profile/list-pending/list-pending.component.html
@@ -14,16 +14,16 @@
                                                     <h5>List of friend requests <span>{{sumPending}}</span></h5>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-6">
-                                                <div class="row merged20">
-                                                    <div class="col-lg-7 col-lg-7 col-sm-7">
-                                                        <form method="post">
-                                                            <input type="text" placeholder="Search Friend">
-                                                            <button type="submit"><i class="fa fa-search"></i></button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
+<!--                                            <div class="col-lg-6">-->
+<!--                                                <div class="row merged20">-->
+<!--                                                    <div class="col-lg-7 col-lg-7 col-sm-7">-->
+<!--                                                        <form method="post">-->
+<!--                                                            <input type="text" placeholder="Search Friend">-->
+<!--                                                            <button type="submit"><i class="fa fa-search"></i></button>-->
+<!--                                                        </form>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
                                         </div>
                                     </div>
                                 </div>
@@ -38,7 +38,7 @@
                                                     <div class="frnd-meta">
                                                         <img [src]="element.avatar" alt="avatar" style="height: 70px ;width: 70px">
                                                         <div class="frnd-name">
-                                                            <a routerLink="/home/profile/{{element.id}}">{{element.name}}</a>
+                                                            <a (click)="navigateToProfile(element.id)">{{element.name}}</a>
                                                         </div>
                                                         <ul class="frnd-info">
                                                             <li *ngIf="element.phone"><span>Phone:{{element.phone}}</span> </li>
