--- a/src/app/posting/posting/comment/comment.component.html
+++ b/src/app/posting/posting/comment/comment.component.html
@@ -17,7 +17,12 @@
             <p style="color: #3a3939; font-family: Arial">{{comment.content}}</p>
             <div class="inline-itms">
                 <span style="color: darkgrey">{{comment.dateOfComment}}</span>
-                <a href="#" title=""><i class="fa fa-heart"></i><span>20</span></a>
+                <div *ngIf="isLiked === false">
+                    <a (click)="likeComment(comment.id)" title=""><i class="fa fa-heart"></i><span [(ngModel)]="like">{{like}}</span></a>
+                </div>
+                <div *ngIf="isLiked === true">
+                    <a (click)="likeComment(comment.id)" title=""><i style="color: orangered;" class="fa fa-heart"></i><span [(ngModel)]="like">{{like}}</span></a>
+                </div>
             </div>
         </div>
  </li>
