--- a/src/app/posting/posting/comment/comment.component.html
+++ b/src/app/posting/posting/comment/comment.component.html
@@ -2,7 +2,7 @@
          <div class="more-post-optns" style="float: right"><i class="ti-more-alt"></i>
              <ul>
                  <li *ngIf="comment.owner.id === idLogging" (click)="openDialogEdit()"><i class="fa fa-pencil-square-o" (click)="openDialogEdit()"></i>Edit Comment</li>
-                 <li *ngIf="comment.owner.id === idLogging" (click)="openDialogDelete()"><i class="fa fa-trash-o" (click)="openDialogDelete()"></i>Delete Comment</li>
+                 <li *ngIf="comment.owner.id === idLogging || comment.posting.owner.id === idLogging" (click)="openDialogDelete()"><i class="fa fa-trash-o" (click)="openDialogDelete()"></i>Delete Comment</li>
                  <li class="bad-report"><i class="fa fa-flag"></i>Report Comment</li>
                  <li *ngIf="comment.owner.id === idLogging"><i class="fa fa-address-card-o"></i>Boost This Commet</li>
                  <li *ngIf="comment.owner.id === idLogging"><i class="fa fa-clock-o"></i>Schedule Comment</li>
