--- a/src/app/nav-bar2/nav-bar2.component.html
+++ b/src/app/nav-bar2/nav-bar2.component.html
@@ -326,87 +326,11 @@
                     <a href="#" title="Notification" data-ripple="">
                         <i class="fa fa-bell"></i><em class="bg-purple">7</em>
                     </a>
+<!--                    thay o day-->
                     <div class="dropdowns">
-                        <span>4 New Notifications <a href="#" title="">Mark all as read</a></span>
-                        <ul class="drops-menu">
-                            <li>
-                                <a href="notifications.html" title="">
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-1.jpg" alt="">
-                                        <span class="status f-online"></span>
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6>sarah Loren</h6>
-                                        <span>commented on your new profile status</span>
-                                        <i>2 min ago</i>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="notifications.html" title="">
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-2.jpg" alt="">
-                                        <span class="status f-online"></span>
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6>Jhon doe</h6>
-                                        <span>Nicholas Grissom just became friends. Write on his wall.</span>
-                                        <i>4 hours ago</i>
-                                        <figure>
-                                            <span>Today is Marina Valentine’s Birthday! wish for celebrating</span>
-                                            <img src="../../assets/images/birthday.png" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="notifications.html" title="">
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-3.jpg" alt="">
-                                        <span class="status f-online"></span>
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6>Andrew</h6>
-                                        <span>commented on your photo.</span>
-                                        <i>Sunday</i>
-                                        <figure>
-                                            <span>"Celebrity looks Beautiful in that outfit! We should see each"</span>
-                                            <img src="../../assets/images/resources/admin.jpg" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="notifications.html" title="">
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-4.jpg" alt="">
-                                        <span class="status f-online"></span>
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6>Tom cruse</h6>
-                                        <span>nvited you to attend to his event Goo in</span>
-                                        <i>May 19</i>
-                                    </div>
-                                </a>
-                                <span class="tag">New</span>
-                            </li>
-                            <li>
-                                <a href="notifications.html" title="">
-                                    <figure>
-                                        <img src="../../assets/images/resources/thumb-5.jpg" alt="">
-                                        <span class="status f-online"></span>
-                                    </figure>
-                                    <div class="mesg-meta">
-                                        <h6>Amy</h6>
-                                        <span>Andrew Changed his profile picture. </span>
-                                        <i>dec 18</i>
-                                    </div>
-                                </a>
-                                <span class="tag">New</span>
-                            </li>
-                        </ul>
-                        <a href="notifications.html" title="" class="more-mesg">View All</a>
+                        <app-notification></app-notification>
                     </div>
+
                 </li>
                 <li>
                     <a href="#" title="Messages" data-ripple=""><i class="fa fa-commenting"></i><em class="bg-blue">9</em></a>
